...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Tetraedro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.00"
                android:background="@drawable/tetrahedron1"
                android:onClick="TetraedroOnClick"
                app:srcCompat="@android:color/transparent" />
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Octaedro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.00"
                android:background="@drawable/octahedron1"
                app:srcCompat="@android:color/transparent" />

...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Cubo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.05"
                android:background="@drawable/cube1"
                app:srcCompat="@android:color/transparent" />

...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Icosaedro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.97"
                android:background="@drawable/icosahedron1"
                app:srcCompat="@android:color/transparent" />

...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Dodecaedro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.94"
                android:background="@drawable/dodecahedron1"
                app:srcCompat="@android:color/transparent" />

...
